# Electrical-Hardware-Design

./: #auto_saved_files#  .gitignore  .gitmodules  BOM.xlsx  CAN-USB RF Module-DESKTOP-UUV004C-2.kicad_pcb  CAN-USB RF Module-DESKTOP-UUV004C-2.kicad_prl  CAN-USB RF Module-DESKTOP-UUV004C.kicad_pcb  CAN-USB RF Module-DESKTOP-UUV004C.kicad_prl  CAN-USB RF Module-DESKTOP-UUV004C.kicad_pro  CAN-USB RF Module-DESKTOP-UUV004C.kicad_sch  CAN-USB RF Module-abis-school-pc3.kicad_pcb  CAN-USB RF Module.csv  CAN-USB RF Module.kicad_pcb  CAN-USB RF Module.kicad_prl  CAN-USB RF Module.kicad_pro  CAN-USB RF Module.kicad_sch  CAN-USB RF Module.kicad_sch-bak  CAN-USB RF Module.xml  CANBUS Breakout Board.kicad_pcb  CANBUS Breakout Board.kicad_prl  CANBUS Breakout Board.kicad_pro  CANBUS Breakout Board.kicad_sch  CAN_Tranciever-DESKTOP-UUV004C.kicad_sch  CAN_Tranciever.kicad_sch  Components.md  FCBoard.kicad_sym  LoRa_Tranciever_sch-DESKTOP-UUV004C.kicad_sch  LoRa_Tranciever_sch.kicad_sch  LoRa_Tranciever_sch.kicad_sch-bak  README.md  _autosave-CAN-USB RF Module.kicad_pcb  fp-info-cache  fp-info-cache-DESKTOP-UUV004C  fp-info-cache-abis-gaming-pc  freerouting.dsn  power_regulator.kicad_sch  powersupply.md  register compare arduino to hal.txt  some  sym-lib-table  (+5 more)
FCC_Lucy_Src_V1/: .mxproject  CMakeLists.txt  Fuel_Cell_Controller_Lucy_V1.ioc  Makefile
FCC_Lucy_Src_V1/.cache/clangd/index/: ADS1115.c.1EE1E0E50C4257C3.idx  ADS1115.c.E048532DB28E309D.idx  ADS1115.c.E95BA785EBD52CDB.idx  ADS1115.c.EEA85E28C067C953.idx  ADS1115.h.4BE65958C1FF3AC4.idx  ADS1115.h.97F6B24B05CEDF42.idx  ADS1115.h.983A83F4472B7AF7.idx  ADS1115.h.E2959105E2B62DEA.idx  FreeRTOS.h.73D13A247B59D43C.idx  FreeRTOS.h.8E4C0B56560A916F.idx  FreeRTOS.h.9CAF88E0539033A7.idx  FreeRTOSConfig.h.567C43418B1EEAF8.idx  FreeRTOSConfig.h.692FAC186FA1BE84.idx  FreeRTOSConfig.h.7B402C4F4514A13F.idx  FreeRTOSConfig.h.9D01F1AD4BFB3DC2.idx  LIS3DH.c.B189BD9685C05942.idx  canid.h.2590CA67195C9C28.idx  canid.h.25BAC9FC6A29ECCA.idx  canid.h.C933620A164B8B2E.idx  canid.h.F3592138E8CF45AE.idx  canid.h.F4E3FD14119824F3.idx  cmsis_compiler.h.806E5C2A8BA430B4.idx  cmsis_compiler.h.A7C9B93A21CC3AB2.idx  cmsis_compiler.h.C8D3C922E14701A3.idx  cmsis_compiler.h.C9505FA287A6FDB0.idx  cmsis_gcc.h.412567D557B9AA62.idx  cmsis_gcc.h.51195B57CA7EF4C7.idx  cmsis_gcc.h.5CCEFB548196E962.idx  cmsis_os.h.313CF5FB9DC73126.idx  cmsis_os.h.9E156AB42D955B65.idx  cmsis_os.h.A083E180C1515F92.idx  cmsis_os.h.F64AC19393EB3CA1.idx  cmsis_os2.c.517D03AFEE40246E.idx  cmsis_os2.c.88847AC771F8E76A.idx  cmsis_os2.c.AB2E2797041EA397.idx  cmsis_os2.c.AB5E92BEACAD091C.idx  cmsis_os2.h.5788AF9FA96941ED.idx  cmsis_os2.h.6928ABE63280B9E5.idx  cmsis_os2.h.E2A3890B587A87A1.idx  cmsis_os2.h.F17448E9CF4579AD.idx  (+380 more)
FCC_Lucy_Src_V1/Core/Inc/: lis3dh_driver.h
FCC_Lucy_Src_V1/Core/Src/: lis3dh_driver.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
RF-Module-Firmware/RF-Module-Firmware-HAL/: .cproject  .mxproject  .project  CMakeLists.txt  RF-Module-Firmware-HAL Debug.launch  RF-Module-Firmware-HAL-Sender Debug.launch  RF-Module-Firmware-HAL-Sender.ioc  RF-Module-Firmware-HAL-abis-school-pc3.ioc  RF-Module-Firmware-HAL.ioc
RF-Module-Firmware/RF-Module-Firmware-HAL/.metadata/: .log4j.xml
RF-Module-Firmware/RF-Module-Firmware-HAL/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
RF-Module-Firmware/RF-Module-Firmware-HAL/Core/Inc/: FreeRTOSConfig-abis-school-pc3.h  can.h  lucy-can-ids.h  rf-rfm95.h  stm32l4xx_hal_conf.h
RF-Module-Firmware/RF-Module-Firmware-HAL/Core/Inc/Backup/: FreeRTOSConfig.h.bak  can.h.bak  debug-log.h.bak  eco-can.h.bak  lucy-can-ids.h.bak  main.h.bak  packets.h.bak  rf-rfm95-resgisters.h.bak  rf-rfm95.h.bak  rfm95.h.bak  stm32l4xx_hal_conf.h.bak  stm32l4xx_it.h.bak
RF-Module-Firmware/RF-Module-Firmware-HAL/Core/Src/: can.c  freertos.c  gpio.c  main.c  rf-rfm95.c  rfm95.c  spi.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  tim.c
RF-Module-Firmware/RF-Module-Firmware-HAL/Core/Src/Backup/: can.c.bak  freertos-abis-school-pc3.c.bak  freertos.c.bak  gpio.c.bak  main.c.bak  rf-rfm95.c.bak  rfm95.c.bak  rng.c.bak  serializer.c.bak  spi.c.bak  stm32l4xx_hal_timebase_tim.c.bak  stm32l4xx_it.c.bak
RF-Module-Firmware/RF-Module-Firmware-HAL/Debug/: RF-Module-Firmware-HAL-Sender.elf  RF-Module-Firmware-HAL-Sender.list  RF-Module-Firmware-HAL-Sender.map  RF-Module-Firmware-HAL-abis-school-pc3.elf  RF-Module-Firmware-HAL.elf  RF-Module-Firmware-HAL.list  RF-Module-Firmware-HAL.map  makefile  objects.list  sources.mk
RF-Module-Firmware/RF-Module-Firmware-HAL/Debug/Core/Src/: can.cyclo  can.d  can.su  freertos-abis-school-pc3.cyclo  freertos-abis-school-pc3.su  freertos.cyclo  freertos.d  freertos.su  gpio.d  main.cyclo  main.d  main.su  rf-rfm95.cyclo  rf-rfm95.d  rf-rfm95.su  rfm95.cyclo  rfm95.d  rfm95.su  rng.d  rtc.d  rtc.su  serializer.d  spi.d  stm32l4xx_hal_msp.d  stm32l4xx_hal_timebase_tim.d  stm32l4xx_it.cyclo  stm32l4xx_it.d  stm32l4xx_it.su  subdir.mk  system_stm32l4xx.d  tim.cyclo  tim.d  tim.su  usart.d  usart.su
RF-Module-Firmware/RF-Module-Firmware-HAL/Debug/Core/Startup/: subdir.mk
RF-Module-Firmware/RF-Module-Firmware-HAL/Debug/rfm95/: rfm95.cyclo  rfm95.su
RF-Module-Firmware/RF-Module-Firmware-HAL/cmake/: st-project.cmake
RF-Module-Firmware/RF-Module-Firmware-HAL/rfm95/: rfm95.c
Relay-Board_2023_Lucy_V1/Relay_Lucy_Src_V1/: CMakeLists.txt  Relay-Board_2023_Lucy_V1.ioc  gcc-arm-none-eabi.cmake
Relay-Board_2023_Lucy_V1/Relay_Lucy_Src_V1/.cache/clangd/index/: FreeRTOS.h.49EBFE3286AC60B2.idx  FreeRTOS.h.81CE2DFFE21C2F6C.idx  FreeRTOS.h.DD80F2F99E42921E.idx  FreeRTOSConfig.h.4CD8ADB370E93E60.idx  FreeRTOSConfig.h.7A4F87A4FBAE8C1F.idx  FreeRTOSConfig.h.E192F9602C840A48.idx  canid.h.18127C6699AA939E.idx  canid.h.CD992AE18E18E41B.idx  canid.h.D806ED371D33F999.idx  cmsis_compiler.h.3744E04F4B51F71D.idx  cmsis_compiler.h.48ED96CF6B6D622E.idx  cmsis_compiler.h.7B80C6F2EC1192D1.idx  (+288 more)
Relay-Board_2023_Lucy_V1/Relay_Lucy_Src_V1/Core/Inc/: canid.h  main.h
Relay-Board_2023_Lucy_V1/Relay_Lucy_Src_V1/Core/Src/: main.c  stm32f4xx_it.c  syscalls.c
(+2312 files in other folders)
